docs: :memo: add Swagger decorators to update documentation
